modules/vpc/main.tf
resource "aws_vpc" "main" {
   cidr_block         = var.vpc_cidr
   enable_dns_support = true
   enable_dns_hostname = true

   tags = {
     Nmae = "main-vpc"
  } 
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "public_subnet" {
  count                = length(var.public_subnets_cidr)
  vpc_id               = aws_vpc.main.id
  cidr_block           = var.public_subnets_cidr(count.index)
  map_public_ip_on_launch = true
  availability_zone    = element(var.availability_zones, count.index)

 tags = {
   Name = "public-subnet-${count.index}"
 } 

}

resource "aws_route_table" "public_route_table"
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
}

tags = {
  Name = "public-route-table"
  }
}

resource "aws_route_table_association" "public_subnet_association" {
  count             = length(aws_subnet.public_subnet)
  subnet_id         = aws_subnet.public_subnet[count.index].id
  route_table_id    = aws_route_table.public_route_table.id
}

resource "aws_subnet" "private_subnet" {
  count              = length(var.private_subnets_cidr)
  vpc_id             = aws_vpc.main.id
  cidr_block         = var.private_subnets_cidr[count.index]
  availability_zone  = element(var.availability_zones, count.index)

  tags = {
    Name = "private-subnet-${count.index}"
  }
}

resource "aws_nat_gateway" "nat_gw" {
   count       = length(var.public_subnets_cidr)
   subnet_id   = aws_subnet.public_subnet[count.index].id
   allocation_id = aws_eip.nat[count.index].id

   depends_on = [aws_internet_gateway.gw, aws_eip.nat]
}

resource "aws_eip" "nat" {
   count = length(var.public_subnets_cidr)
   domain = "vpc"
}

resource "aws_route_table" "private_route_table" {
   vpc_id = aws_vpc.main.id

   route {
     cidr_block   = "0.0.0.0/0"
     nat_gateway_id = aws_nat_gateway.nat_gw[0].id
}

 tags = {
   Name = "private-route-table"
  }
}

resource "aws_route_table_association" "private_subnet_association" {
   count           = length(aws_subnet.private_subnet)
   subnet_id       = aws_subnet.private_subnet[count.index].id
   route_table_id  = aws_route_table.private_route_table.id
}
